--- a/shopping.html
+++ b/shopping.html
@@ -8,8 +8,23 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <h1>Welcome to our Shopping App</h1>
+        <img src="11.jpg" alt="Shopping App Header Image" class="header-image">
+        <nav>
+            <ul>
+                <li><a href="index.html" onclick="showPage('createUserPage')">Create User</a></li>
+                <li><a href="login.html" onclick="showPage('loginPage')">Login</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<h1>Shopping Cart Example</h1>
+    <div class="hero-banner">  
+        <img src="A.jpg" alt="Shopping Page Hero Banner">  
+    </div>  
+    <h1>Shopping Cart Example</h1>
 
 <div class="product-container"> 
     <div class="product-box" data-product-id="1" data-product-name="Product 1" data-product-price="100">
